tests/negative/test_ref_type_attr.orb
fnc main () () {
    eval (sym (x 0:i32));
    = (attrOf x type) i64;
};